--- a/index.html
+++ b/index.html
@@ -8,5 +8,23 @@
 		<link rel="stylesheet" href="style.css" />
 		<script src="script.js" defer></script>
 	</head>
-	<body></body>
+	<body>
+		<div class="container">
+			<div class="title">
+				<h1>Tic-Tac-Toe</h1>
+			</div>
+
+			<div class="board">
+				<div class="cell" data-row="0" data-col="0"></div>
+				<div class="cell" data-row="0" data-col="1"></div>
+				<div class="cell" data-row="0" data-col="2"></div>
+				<div class="cell" data-row="1" data-col="0"></div>
+				<div class="cell" data-row="1" data-col="1"></div>
+				<div class="cell" data-row="1" data-col="2"></div>
+				<div class="cell" data-row="2" data-col="0"></div>
+				<div class="cell" data-row="2" data-col="1"></div>
+				<div class="cell" data-row="2" data-col="2"></div>
+			</div>
+		</div>
+	</body>
 </html>
