--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 				<h1>Tic-Tac-Toe</h1>
 			</div>
 
+			<div class="status"></div>
+
 			<div class="board">
 				<div class="cell" data-row="0" data-col="0"></div>
 				<div class="cell" data-row="0" data-col="1"></div>
