finish: restart btn, removing making moves when game is over

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 				<div class="cell" data-row="2" data-col="1"></div>
 				<div class="cell" data-row="2" data-col="2"></div>
 			</div>
+			<div class="buttons">
+				<button class="restart-btn">Restart</button>
+			</div>
 		</div>
 	</body>
 </html>
