finish: allowing players to change their names and fixing some bugs

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			</div>
 			<div class="buttons">
 				<button class="restart-btn">Restart</button>
+				<button class="namechange-btn">Change names</button>
 			</div>
 		</div>
 	</body>
